--- a/src/index0.html
+++ b/src/index0.html
@@ -5,12 +5,24 @@
     <style>
       body { margin: 0px; }
       html { background: black; color:cyan; overflow: hidden; }
+      div { color: yellow; }
       canvas { background: lightblue; }
     </style>
     <meta charset="utf-8">
   </head>
 
   <body id="body1">
+
+    <div> <br>
+    This chapter 2 sample just compiles and runs a few lines of TypeScript - 
+
+<pre>
+  let test:string = 'Hello Typescript!';
+  console.log(test);
+  document.body.firstChild!.textContent = test;
+</pre>
+
+  </div>
     <canvas id="canvas1"></canvas>
   </body>
 </html>
