--- a/src/index0.html
+++ b/src/index0.html
@@ -11,6 +11,12 @@
   </head>
 
   <body id="body1">
+
+In chapter 3 we make a coloured letter grid, which resizes with the browser.<br>
+  Our game may later use graphical tiles and sprites, but we want it to be able to run with just ASCII,<br>
+so we aren't dependent on a single graphics engine.
+
     <canvas id="canvas1"></canvas>
+
   </body>
 </html>
