--- a/src/index0.html
+++ b/src/index0.html
@@ -10,6 +10,9 @@
     <meta charset="utf-8">
   </head>
 
+In chapter 4 our screens take keyboard input from the user.<br>
+We can accept mouse or touch input in a similar way.<br>
+When you press keys, they print on the screen.
   <body id="body1">
     <canvas id="canvas1"></canvas>
   </body>
